java 11: run!